[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Buildings/Lab/Lab.gd" type="Script" id=2]
[ext_resource path="res://src/UI/LabUI/LabUI.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.0486, 94.1484 )

[node name="Lab" type="Node2D"]
position = Vector2( 268.232, 231.215 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ButtonBuild" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "BUILD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionUI" type="Position2D" parent="."]
position = Vector2( 125.434, -118.104 )

[node name="LabUI" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="ButtonBuild" to="." method="_on_ButtonBuild_pressed"]
